# Fast-SP-GS

./: .gitignore  gui.py  pyproject.toml  requriments.txt  train.py
data_loader/: batch_collator.py  batch_samplers.py  build.py
datasets/: DNerfDataset.py  DyNeRFDataset.py  NerfiesDataset.py  __init__.py  base.py  build.py  colmap_dataset.py  config_utils.py
exps/: d_nerf.yaml
fast_2d_gs/: __init__.py  freq_encoder.py  gaussian_splatting.py  network.py  sparse_gaussian_adam.py
fast_2d_gs/_C/: CMakeLists.txt  __init__.py  setup.py
fast_2d_gs/_C/include/: common.hpp  gaussian_render.h  ops_3d.h  ops_3d_types.h  reduce.h  spherical_harmonic.h  util.cuh
fast_2d_gs/losses/: SC_GS_arap_loss.py  __init__.py  build.py  chamfer_distance.py  depth.py  eikonal.py  gs_flow_loss.py  loss.py  ssim.py
fast_2d_gs/renderer/: __init__.py  gaussian_render.py  gaussian_render_origin.py  gs_2d_fast_render.py  gs_2d_render.py  gs_2d_render_origin.py
utils/: __init__.py  camera.py  cdist_top.py  checkpoint.py  colmap.py  config.py  config_utils.py  flow.py  hook.py  image.py  image_io.py  meter.py  msic.py  my_logger.py  ply.py  point_sample.py  progress.py  test_utils.py  time_estimator.py  torch_utils.py  trainer.py
utils/metrics/: __init__.py  accuracy_metric.py  average_metric.py  base.py  build.py  image_metric.py  loss_metric.py
utils/metrics/lpipsPyTorch/: __init__.py
utils/ops_3d/: __init__.py  camera.py  coord_trans.py  coord_trans_common.py  coord_trans_opencv.py  coord_trans_opengl.py  misc.py  quaternion.py  rigid.py  rotation.py  spherical_harmonics.py  xfm.py
(+31 files in other folders)
